--- a/J adress viewer/html/index.html
+++ b/J adress viewer/html/index.html
@@ -12,7 +12,9 @@
 
 <body>
     <div class="functies">
-        <img src="../img/J adress viewer logo.png" width="150">
+        <div class="logo">
+            <img src="../img/J adress viewer logo.png" width="150">
+        </div>
     </div>
     <div class="wrapper">
         <div class="lijst">
